<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/txtTitle"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="@+id/txtDiscount"
        app:layout_constraintStart_toStartOf="@+id/txtDiscount"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDiscount"
        android:layout_width="315dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center_horizontal"
        android:text="@string/txtDiscount"
        android:textSize="23dp"
        app:layout_constraintEnd_toEndOf="@+id/txtCarWash"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/txtCarWash"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/txtCarWash"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDiscount" />

    <RadioGroup
        android:id="@+id/radChoiceGroup"
        android:layout_width="304dp"
        android:layout_height="126dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:checkedButton="@id/radExterior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCarWash">

        <RadioButton
            android:id="@+id/radExterior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radExterior"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radInterior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radInterior"
            android:textSize="20dp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/btnCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radChoiceGroup" />

    <ImageView
        android:id="@+id/imgCarWash"
        android:layout_width="200dp"
        android:layout_height="110dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotal"
        app:srcCompat="@drawable/carwash"
        tools:srcCompat="@drawable/carwash" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalc" />
</androidx.constraintlayout.widget.ConstraintLayout>